<resources>
    <string name="app_name">Moodi</string>
    <string name="motto">Send Moods</string>

    <!-- List of Emotional States for spinner in post creation -->
    <string name="Emo_propmt">Choose a Emotion</string>
    <string-array name="EmotionalStates">
        <item>Happy</item>
        <item>Mad</item>
        <item>Sad</item>
        <item>Love</item>
        <item>Tired</item>
    </string-array>

    <string-array name="social_situation">
        <item>Alone</item>
        <item>With one other person</item>
        <item>With two to several people</item>
        <item>With a crowd</item>
    </string-array>

    <string-array name="mood_history_filters">
        <item>All</item>
        <item>Happy</item>
        <item>Mad</item>
        <item>Sad</item>
        <item>Love</item>
        <item>Tired</item>
    </string-array>

    <!-- List of Minute and Hour for date entry -->
    <string-array name="hour_array">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="minute_array">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="SocialSituation">
        <item>Alone</item>
        <item>With one friend</item>
        <item>With two friend</item>
        <item>With a group</item>
        <item>Secret</item>
    </string-array>

    <!-- String Resources-->
    <string name="users_collection_path">users</string>
    <string name="posts_collection_path">posts</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_social">Social</string>
    <string name="moodi">Moodi</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_yet_registered_sign_up_here">Not yet registered? Sign up here.</string>
    <string name="send_moods">Send Moods</string>
    <string name="create_a_new_account">Create a new account!</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="create_account">Create Account</string>
    <string name="already_registered_log_in_here">Already registered? Log in here.</string>
    <string name="welcome_to">Welcome to</string>
    <string name="make_a_post">Make A Post!</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_maps">Maps</string>
    <string name="title_post">Post</string>
    <string name="title_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="time_24_hour">Time (24 Hour):</string>
    <string name="hr">hr</string>
    <string name="min">min</string>
    <string name="title_activity_add_location">Map</string>
    <string name="set_to_this_location">Set to this location</string>
    <string name="emotional_state">Emotional State:</string>
    <string name="reasoning">Reasoning:</string>
    <string name="oh_whys_that">Oh, whys that?</string>
    <string name="social_situation">Social Situation:</string>
    <string name="currently_tagged_location">Currently Tagged Location:</string>
    <string name="none">none</string>
    <string name="date">Date</string>
    <string name="image">Image</string>
    <string name="add_location_button">add location button</string>
    <string name="add_camera_photo_button">add camera photo button</string>
    <string name="post_mood_button">post mood button</string>
    <string name="add_gallery_photo_button">add gallery photo button</string>
    <string name="comma_space">, </string>
    <string name="users_uploaded_photo">Users uploaded photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
