<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="cmput301.moodi.ui.LoggedIn.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="cmput301.moodi.ui.LoggedIn.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_post"
        android:name="cmput301.moodi.ui.LoggedIn.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/navigation_social"
        android:name="cmput301.moodi.ui.LoggedIn.social.SocialFragment"
        android:label="@string/title_social"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="cmput301.moodi.ui.LoggedIn.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>